# lambda-calculus

./: .gitignore  Cargo.toml  LICENSE  README.md  build-debug.sh  build-release.sh  default_defs.txt  watch-debug.sh  watch-release.sh
src/: defs.rs  display.rs  eval.rs  help.rs  lib.rs  main.rs  parse.rs  types.rs
static/: index.html  style.css
