[package]
name = "lambda-calculus"
version = "0.1.0"
authors = ["Nathan Stoddard <nstoddard@users.noreply.github.com>"]
edition = "2018"
description = "A lambda calculus interpreter that works on desktop and wasm"

[lib]
crate-type = ["cdylib"]
name = "lambda_calculus_wasm"

[dependencies]
nom = "6.2.1"
anyhow = "1.0.42"
simple-error = "0.2.3"
hashbag = "0.1.3"
serde_json = "1.0.66"
serde = "1.0.127"
yew = "0.18.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustyline = "8.2.0"
directories-next = "2.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.75"
console_error_panic_hook = "0.1.6"
web-sys = { version = "0.3.52", features = [
  "HtmlElement",
] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
