[package]
name = "lambda-calculus"
version = "0.1.0"
authors = ["Nathan Stoddard <nstoddard@users.noreply.github.com>"]
edition = "2018"
description = "A lambda calculus interpreter that works on desktop and wasm"

[lib]
crate-type = ["cdylib"]
name = "lambda_calculus_wasm"

[dependencies]
nom = "7.0.0"
anyhow = "1.0.44"
simple-error = "0.2.3"
hashbag = "0.1.3"
serde_json = "1.0.68"
serde = "1.0.130"
yew = "0.18.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustyline = "9.0.0"
directories-next = "2.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.78"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.55", features = [
  "HtmlElement",
] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
